crates/of_ffi_c/include/orderflow.h


typedef struct of_engine of_engine_t;
typedef struct of_execution_engine of_execution_engine_t;
typedef struct of_execution_concurrent_engine of_execution_concurrent_engine_t;
typedef struct of_subscription of_subscription_t;
typedef struct {
  const char* instance_id;
  const char* config_path;
  uint32_t log_level;
  uint8_t enable_persistence;
  uint64_t audit_max_bytes;
  uint32_t audit_max_files;
  const char* audit_redact_tokens_csv;
  uint64_t data_retention_max_bytes;
  uint64_t data_retention_max_age_secs;
} of_engine_config_t;
typedef struct {
  const char* venue;
  const char* symbol;
  uint16_t depth_levels;
} of_symbol_t;
typedef struct {
  of_symbol_t symbol;
  int64_t price;
  int64_t size;
  uint32_t aggressor_side;
  uint64_t sequence;
  uint64_t ts_exchange_ns;
  uint64_t ts_recv_ns;
} of_trade_t;
typedef struct {
  of_symbol_t symbol;
  uint32_t side;
  uint16_t level;
  int64_t price;
  int64_t size;
  uint32_t action;
  uint64_t sequence;
  uint64_t ts_exchange_ns;
  uint64_t ts_recv_ns;
} of_book_t;
typedef struct {
  uint64_t stale_after_ms;
  uint8_t enforce_sequence;
} of_external_feed_policy_t;
typedef void (*of_event_cb)(const of_event_t* ev, void* user_data);
typedef struct {
  const char* route_id;
  const char* account_id;
  const char* venue;
  const char* instrument;
  uint8_t enabled;
  uint8_t kill_switch;
  int64_t max_order_qty;
  int64_t max_order_notional;
  uint32_t max_open_orders;
  int64_t max_open_notional;
  int64_t price_band_ticks;
} of_execution_route_config_t;
typedef struct {
  const char* client_order_id;
  const char* account_id;
  const char* route_id;
  const char* strategy_id;
  const char* venue;
  const char* instrument;
  uint32_t side;
  uint32_t order_type;
  uint32_t time_in_force;
  int64_t quantity;
  int64_t limit_price;
  int64_t stop_price;
  uint64_t ts_exchange_ns;
  uint64_t ts_recv_ns;
} of_execution_order_request_t;
typedef struct {
  const char* client_order_id;
  const char* orig_client_order_id;
  const char* venue_order_id;
  const char* account_id;
  const char* route_id;
  const char* venue;
  const char* instrument;
  uint64_t ts_recv_ns;
} of_execution_cancel_request_t;
typedef struct {
  const char* client_order_id;
  const char* orig_client_order_id;
  const char* venue_order_id;
  const char* account_id;
  const char* route_id;
  const char* venue;
  const char* instrument;
  int64_t quantity;
  int64_t limit_price;
  uint64_t ts_recv_ns;
} of_execution_amend_request_t;
typedef struct {
  uint32_t exec_type;
  uint32_t order_status;
  char client_order_id[41];
  char orig_client_order_id[41];
  char venue_order_id[49];
  char execution_id[49];
  char account_id[33];
  char route_id[33];
  char venue[17];
  char instrument[33];
  int64_t last_qty;
  int64_t last_price;
  int64_t cumulative_qty;
  int64_t leaves_qty;
  int64_t average_price;
  uint64_t ts_exchange_ns;
  uint64_t ts_recv_ns;
  uint32_t reason;
  char text[129];
} of_execution_event_t;
typedef struct {
  char client_order_id[41];
  char venue_order_id[49];
  char account_id[33];
  char route_id[33];
  char venue[17];
  char instrument[33];
  uint32_t status;
  int64_t order_qty;
  int64_t cumulative_qty;
  int64_t leaves_qty;
  int64_t average_price;
  uint64_t updated_ns;
} of_execution_order_state_t;
typedef struct {
  uint8_t connected;
  uint8_t degraded;
  uint64_t health_seq;
} of_execution_health_t;
typedef struct {
  uint64_t submitted;
  uint64_t cancelled;
  uint64_t amended;
  uint64_t events_applied;
  uint64_t risk_rejected;
  uint64_t adapter_errors;
  uint64_t recovered;
} of_execution_metrics_t;
typedef struct {
  uint64_t records;
  uint64_t bytes;
  uint64_t first_sequence;
  uint64_t last_sequence;
  uint64_t checksum_failures;
  uint64_t sequence_failures;
  uint8_t has_first_sequence;
  uint8_t has_last_sequence;
  uint8_t truncated_tail;
  uint8_t valid;
} of_execution_wal_integrity_report_t;
typedef struct {
  uint64_t segments;
  uint64_t records;
  uint64_t bytes;
  uint64_t first_sequence;
  uint64_t last_sequence;
  uint64_t checksum_failures;
  uint64_t sequence_failures;
  uint8_t has_first_sequence;
  uint8_t has_last_sequence;
  uint8_t valid;
} of_execution_segmented_wal_integrity_report_t;
typedef struct {
  uint64_t checkpoint_files;
  uint64_t valid_checkpoints;
  uint64_t invalid_checkpoints;
  uint64_t bytes;
  uint64_t latest_checkpoint_id;
  uint64_t latest_last_applied_sequence;
  uint64_t latest_created_ns;
  uint8_t has_latest;
  uint8_t valid;
} of_execution_checkpoint_store_integrity_report_t;
typedef struct {
  uint32_t command_capacity;
  uint32_t report_capacity;
  uint32_t event_buffer_capacity;
} of_execution_concurrent_config_t;
typedef struct {
  uint64_t sequence;
  uint32_t kind;
  int32_t result_code;
  uint32_t event_count;
} of_execution_command_report_t;
uint32_t of_api_version(void);
const char* of_build_info(void);
uint32_t of_execution_api_version(void);
int32_t of_execution_wal_integrity_report(const char* path, of_execution_wal_integrity_report_t* out_report);
int32_t of_execution_segmented_wal_integrity_report(const char* root, of_execution_segmented_wal_integrity_report_t* out_report);
int32_t of_execution_checkpoint_store_integrity_report(const char* root, of_execution_checkpoint_store_integrity_report_t* out_report);
int32_t of_execution_engine_create(const of_execution_route_config_t* cfg, of_execution_engine_t** out_engine);
int32_t of_execution_engine_create_multi(const of_execution_route_config_t* routes, uint32_t route_count, of_execution_engine_t** out_engine);
int32_t of_execution_engine_start(of_execution_engine_t* engine);
int32_t of_execution_engine_stop(of_execution_engine_t* engine);
void of_execution_engine_destroy(of_execution_engine_t* engine);
int32_t of_execution_submit_order(of_execution_engine_t* engine, const of_execution_order_request_t* req, of_execution_event_t* out_events, uint32_t* inout_len);
int32_t of_execution_cancel_order(of_execution_engine_t* engine, const of_execution_cancel_request_t* req, of_execution_event_t* out_events, uint32_t* inout_len);
int32_t of_execution_amend_order(of_execution_engine_t* engine, const of_execution_amend_request_t* req, of_execution_event_t* out_events, uint32_t* inout_len);
int32_t of_execution_poll(of_execution_engine_t* engine, of_execution_event_t* out_events, uint32_t* inout_len);
int32_t of_execution_get_order_state(const of_execution_engine_t* engine, const char* client_order_id, of_execution_order_state_t* out_state);
int32_t of_execution_health(const of_execution_engine_t* engine, of_execution_health_t* out_health);
int32_t of_execution_metrics(const of_execution_engine_t* engine, of_execution_metrics_t* out_metrics);
int32_t of_execution_concurrent_engine_create_multi(const of_execution_route_config_t* routes, uint32_t route_count, const of_execution_concurrent_config_t* config, of_execution_concurrent_engine_t** out_engine);
void of_execution_concurrent_engine_destroy(of_execution_concurrent_engine_t* engine);
int32_t of_execution_concurrent_stop(of_execution_concurrent_engine_t* engine, uint64_t* out_sequence);
int32_t of_execution_concurrent_submit_order(of_execution_concurrent_engine_t* engine, const of_execution_order_request_t* req, uint64_t* out_sequence);
int32_t of_execution_concurrent_cancel_order(of_execution_concurrent_engine_t* engine, const of_execution_cancel_request_t* req, uint64_t* out_sequence);
int32_t of_execution_concurrent_amend_order(of_execution_concurrent_engine_t* engine, const of_execution_amend_request_t* req, uint64_t* out_sequence);
int32_t of_execution_concurrent_poll(of_execution_concurrent_engine_t* engine, uint64_t* out_sequence);
int32_t of_execution_concurrent_try_recv_report(of_execution_concurrent_engine_t* engine, of_execution_command_report_t* out_report, of_execution_event_t* out_events, uint32_t* inout_len);
int32_t of_engine_create(const of_engine_config_t* cfg, of_engine_t** out_engine);
int32_t of_engine_start(of_engine_t* engine);
int32_t of_engine_stop(of_engine_t* engine);
void of_engine_destroy(of_engine_t* engine);
int32_t of_subscribe(
  of_engine_t* engine,
  const of_symbol_t* symbol,
  uint32_t kind,
  of_event_cb cb,
  void* user_data,
  of_subscription_t** out_sub);
int32_t of_unsubscribe(of_subscription_t* sub);
int32_t of_unsubscribe_symbol(of_engine_t* engine, const of_symbol_t* symbol);
int32_t of_reset_symbol_session(of_engine_t* engine, const of_symbol_t* symbol);
int32_t of_ingest_trade(of_engine_t* engine, const of_trade_t* trade, uint32_t quality_flags);
int32_t of_ingest_book(of_engine_t* engine, const of_book_t* book, uint32_t quality_flags);
int32_t of_configure_external_feed(of_engine_t* engine, const of_external_feed_policy_t* policy);
int32_t of_external_set_reconnecting(of_engine_t* engine, uint8_t reconnecting);
int32_t of_external_health_tick(of_engine_t* engine);
int32_t of_engine_poll_once(of_engine_t* engine, uint32_t quality_flags);
int32_t of_engine_set_tickbar_interval(of_engine_t* engine, int64_t interval_ns);
int32_t of_get_book_snapshot(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);
int32_t of_get_book_analytics_snapshot(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);
int32_t of_compute_weighted_average_price(of_engine_t* engine, const of_symbol_t* symbol, int64_t qty, void* out_buf, uint32_t* inout_len);
int32_t of_compute_depth_slope(of_engine_t* engine, const of_symbol_t* symbol, uint32_t levels, void* out_buf, uint32_t* inout_len);
int32_t of_get_mid_price(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);
int32_t of_get_effective_spread_bps(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);
int32_t of_get_half_spread_cost_bps(of_engine_t* engine, const of_symbol_t* symbol, uint32_t window, void* out_buf, uint32_t* inout_len);
int32_t of_get_realised_spread_bps(of_engine_t* engine, const of_symbol_t* symbol, uint32_t hold_ticks, void* out_buf, uint32_t* inout_len);
int32_t of_get_book_event_analytics(of_engine_t* engine, const of_symbol_t* symbol, uint64_t window_ns, void* out_buf, uint32_t* inout_len);
int32_t of_get_resiliency_snapshot(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);
int32_t of_get_vpin_snapshot(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);
int32_t of_get_kyle_lambda_snapshot(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);
int32_t of_get_amihud_snapshot(of_engine_t* engine, const of_symbol_t* symbol, void* out_buf, uint32_t* inout_len);