bindings/python/orderflow/_generated_signatures.py

"""Generated ctypes signatures for the Orderflow C ABI.

Generated by tools/generate_binding_signatures.py; do not edit.
"""

from __future__ import annotations

import ctypes
from typing import Any


def _bind_symbols(lib: Any, namespace: dict[str, Any]) -> None:
    """Bind every manifest-exposed native function to exact ctypes types."""

    lib.of_api_version.argtypes = []
    lib.of_api_version.restype = ctypes.c_uint32

    lib.of_build_info.argtypes = []
    lib.of_build_info.restype = ctypes.c_char_p

    lib.of_execution_api_version.argtypes = []
    lib.of_execution_api_version.restype = ctypes.c_uint32

    lib.of_execution_wal_integrity_report.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(namespace["OfExecutionWalIntegrityReport"]),
    ]
    lib.of_execution_wal_integrity_report.restype = ctypes.c_int32

    lib.of_execution_segmented_wal_integrity_report.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(namespace["OfExecutionSegmentedWalIntegrityReport"]),
    ]
    lib.of_execution_segmented_wal_integrity_report.restype = ctypes.c_int32

    lib.of_execution_checkpoint_store_integrity_report.argtypes = [
        ctypes.c_char_p,
        ctypes.POINTER(namespace["OfExecutionCheckpointStoreIntegrityReport"]),
    ]
    lib.of_execution_checkpoint_store_integrity_report.restype = ctypes.c_int32

    lib.of_execution_engine_create.argtypes = [
        ctypes.POINTER(namespace["OfExecutionRouteConfig"]),
        ctypes.POINTER(ctypes.c_void_p),
    ]
    lib.of_execution_engine_create.restype = ctypes.c_int32

    lib.of_execution_engine_create_multi.argtypes = [
        ctypes.POINTER(namespace["OfExecutionRouteConfig"]),
        ctypes.c_uint32,
        ctypes.POINTER(ctypes.c_void_p),
    ]
    lib.of_execution_engine_create_multi.restype = ctypes.c_int32

    lib.of_execution_engine_start.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_execution_engine_start.restype = ctypes.c_int32

    lib.of_execution_engine_stop.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_execution_engine_stop.restype = ctypes.c_int32

    lib.of_execution_submit_order.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionOrderRequest"]),
        ctypes.POINTER(namespace["OfExecutionEvent"]),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_execution_submit_order.restype = ctypes.c_int32

    lib.of_execution_cancel_order.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionCancelRequest"]),
        ctypes.POINTER(namespace["OfExecutionEvent"]),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_execution_cancel_order.restype = ctypes.c_int32

    lib.of_execution_amend_order.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionAmendRequest"]),
        ctypes.POINTER(namespace["OfExecutionEvent"]),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_execution_amend_order.restype = ctypes.c_int32

    lib.of_execution_poll.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionEvent"]),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_execution_poll.restype = ctypes.c_int32

    lib.of_execution_get_order_state.argtypes = [
        ctypes.c_void_p,
        ctypes.c_char_p,
        ctypes.POINTER(namespace["OfExecutionOrderState"]),
    ]
    lib.of_execution_get_order_state.restype = ctypes.c_int32

    lib.of_execution_health.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionHealth"]),
    ]
    lib.of_execution_health.restype = ctypes.c_int32

    lib.of_execution_metrics.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionMetrics"]),
    ]
    lib.of_execution_metrics.restype = ctypes.c_int32

    lib.of_execution_concurrent_engine_create_multi.argtypes = [
        ctypes.POINTER(namespace["OfExecutionRouteConfig"]),
        ctypes.c_uint32,
        ctypes.POINTER(namespace["OfExecutionConcurrentConfig"]),
        ctypes.POINTER(ctypes.c_void_p),
    ]
    lib.of_execution_concurrent_engine_create_multi.restype = ctypes.c_int32

    lib.of_execution_concurrent_stop.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint64),
    ]
    lib.of_execution_concurrent_stop.restype = ctypes.c_int32

    lib.of_execution_concurrent_submit_order.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionOrderRequest"]),
        ctypes.POINTER(ctypes.c_uint64),
    ]
    lib.of_execution_concurrent_submit_order.restype = ctypes.c_int32

    lib.of_execution_concurrent_cancel_order.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionCancelRequest"]),
        ctypes.POINTER(ctypes.c_uint64),
    ]
    lib.of_execution_concurrent_cancel_order.restype = ctypes.c_int32

    lib.of_execution_concurrent_amend_order.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionAmendRequest"]),
        ctypes.POINTER(ctypes.c_uint64),
    ]
    lib.of_execution_concurrent_amend_order.restype = ctypes.c_int32

    lib.of_execution_concurrent_poll.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint64),
    ]
    lib.of_execution_concurrent_poll.restype = ctypes.c_int32

    lib.of_execution_concurrent_try_recv_report.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExecutionCommandReport"]),
        ctypes.POINTER(namespace["OfExecutionEvent"]),
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_execution_concurrent_try_recv_report.restype = ctypes.c_int32

    lib.of_execution_engine_destroy.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_execution_engine_destroy.restype = None

    lib.of_execution_concurrent_engine_destroy.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_execution_concurrent_engine_destroy.restype = None

    lib.of_engine_create.argtypes = [
        ctypes.POINTER(namespace["OfEngineConfig"]),
        ctypes.POINTER(ctypes.c_void_p),
    ]
    lib.of_engine_create.restype = ctypes.c_int32

    lib.of_engine_start.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_engine_start.restype = ctypes.c_int32

    lib.of_engine_stop.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_engine_stop.restype = ctypes.c_int32

    lib.of_subscribe.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_uint32,
        namespace["OfEventCallback"],
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_void_p),
    ]
    lib.of_subscribe.restype = ctypes.c_int32

    lib.of_unsubscribe.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_unsubscribe.restype = ctypes.c_int32

    lib.of_unsubscribe_symbol.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
    ]
    lib.of_unsubscribe_symbol.restype = ctypes.c_int32

    lib.of_reset_symbol_session.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
    ]
    lib.of_reset_symbol_session.restype = ctypes.c_int32

    lib.of_ingest_trade.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfTrade"]),
        ctypes.c_uint32,
    ]
    lib.of_ingest_trade.restype = ctypes.c_int32

    lib.of_ingest_book.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfBook"]),
        ctypes.c_uint32,
    ]
    lib.of_ingest_book.restype = ctypes.c_int32

    lib.of_configure_external_feed.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfExternalFeedPolicy"]),
    ]
    lib.of_configure_external_feed.restype = ctypes.c_int32

    lib.of_external_set_reconnecting.argtypes = [
        ctypes.c_void_p,
        ctypes.c_uint8,
    ]
    lib.of_external_set_reconnecting.restype = ctypes.c_int32

    lib.of_external_health_tick.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_external_health_tick.restype = ctypes.c_int32

    lib.of_engine_poll_once.argtypes = [
        ctypes.c_void_p,
        ctypes.c_uint32,
    ]
    lib.of_engine_poll_once.restype = ctypes.c_int32

    lib.of_engine_set_tickbar_interval.argtypes = [
        ctypes.c_void_p,
        ctypes.c_int64,
    ]
    lib.of_engine_set_tickbar_interval.restype = ctypes.c_int32

    lib.of_engine_destroy.argtypes = [
        ctypes.c_void_p,
    ]
    lib.of_engine_destroy.restype = None

    lib.of_get_book_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_book_snapshot.restype = ctypes.c_int32

    lib.of_get_book_analytics_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_book_analytics_snapshot.restype = ctypes.c_int32

    lib.of_compute_weighted_average_price.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_int64,
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_compute_weighted_average_price.restype = ctypes.c_int32

    lib.of_compute_depth_slope.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_uint32,
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_compute_depth_slope.restype = ctypes.c_int32

    lib.of_get_mid_price.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_mid_price.restype = ctypes.c_int32

    lib.of_get_effective_spread_bps.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_effective_spread_bps.restype = ctypes.c_int32

    lib.of_get_half_spread_cost_bps.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_uint32,
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_half_spread_cost_bps.restype = ctypes.c_int32

    lib.of_get_realised_spread_bps.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_uint32,
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_realised_spread_bps.restype = ctypes.c_int32

    lib.of_get_book_event_analytics.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_uint64,
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_book_event_analytics.restype = ctypes.c_int32

    lib.of_get_resiliency_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_resiliency_snapshot.restype = ctypes.c_int32

    lib.of_get_vpin_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_vpin_snapshot.restype = ctypes.c_int32

    lib.of_get_kyle_lambda_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_kyle_lambda_snapshot.restype = ctypes.c_int32

    lib.of_get_amihud_snapshot.argtypes = [
        ctypes.c_void_p,
        ctypes.POINTER(namespace["OfSymbol"]),
        ctypes.c_void_p,
        ctypes.POINTER(ctypes.c_uint32),
    ]
    lib.of_get_amihud_snapshot.restype = ctypes.c_int32
